--- a/Manuscript/hoop.Rmd
+++ b/Manuscript/hoop.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
+```{r include=FALSE}
 library(tidyverse)
 library(agricolae)
 library(lme4)
@@ -44,6 +44,7 @@ model <- drm(injury/10 ~ distance, treat, fct = l2(), data=Data)
 summary(model)
 plot(model)
 ```
+
 ```{r}
 Data = data %>%
   filter(unit=="88") 
@@ -61,6 +62,10 @@ data %>%
   scale_color_brewer(palette = "Paired") +
   ggsave("Figure.png", height=6, width=12)
 ```
+
+
+
+
 ```{r}
 data %>% 
   ggplot(aes(x=treat, y=auc, fill=treat)) + geom_bar(stat = "summary", show.legend = FALSE) +
@@ -128,6 +133,47 @@ coord_flip() +
   ggsave("injury_auc_14.png", units="in", width=10, height=6, dpi=600)
 ```
 
+
+
+
+```{r}
+#model using sqrt transformation
+
+dat28 <- dat %>%  filter(dat == "28")
+
+model=lmer(auc ~ treat + (1|rep), data=dat14)
+anova(model, test.statistic = "F")
+```
+
+```{r}
+emmip(model, ~ treat, type="response") + coord_flip()
+```
+
+
+```{r}
+lsmeans <- emmeans(model, ~ treat, adjust="none", contr="pairwise")
+lsmeans
+```
+
+
+```{r}
+plot(lsmeans, ~ herbicide, comparisons=TRUE, alpha=0.05, adjust="none")
+```
+
+
+```{r}
+nd <- as.data.frame(lsmeans$emmeans)
+ggplot(nd, aes(x=reorder(treat,emmean), y=emmean, color=treat)) + 
+geom_point(size=4) + 
+#scale_color_manual(values=c("red", "blue", "green", "orange", "purple")) +
+theme_bw() + labs(y="Area Under Injury over Distance Stairs (AUIDS)", x="Herbicides") +
+geom_linerange(aes(ymin = lower.CL, ymax = upper.CL), size=1.5) + 
+theme(axis.title = element_text(size=16),
+axis.text = element_text(size=15),
+legend.position = "none") +
+coord_flip() + 
+  ggsave("injury_auc_28.png", units="in", width=10, height=6, dpi=600)
+```
 
 
 
